# ionic_langchain

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
ionic_langchain/: prompt.py  tool.py
tests/: test_get_query_request.py  test_ionic.py  test_ionic_tool.py  test_queries.py  test_query.py
