[tool.poetry]
name = "ionic-langchain"
version = "0.1.8"
description = ""
authors = ["Owen Sims <owen@ionicapi.com>"]
readme = "README.md"
packages = [{include = "ionic_langchain"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "~0.0.352"
ionic-api-sdk = "0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
