[tool.poetry]
name = "ionic-langchain"
version = "0.1.8"
description = ""
authors = ["Owen Sims <owen@ionicapi.com>"]
readme = "README.md"
packages = [{include = "ionic_langchain"}]

[tool.poetry.dependencies]
python = "^3.8.10"
langchain = "~0.0.352"
ionic-api-sdk = "0.5.2"
pytest = "^7.4.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.0"
poethepoet = "^0.24.4"

[tool.poe.tasks.fmt]
cmd = "black ionic_langchain tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
